--- a/src/js/index.html
+++ b/src/js/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Homework11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <form class="form">
-      <label>
+    <header>
+      <form class="search-form">
         <input
+          class="input"
           type="text"
-          name="search-text"
+          name="searchQuery"
           placeholder="Search images..."
-          required
         />
-      </label>
-      <button type="submit">Search</button>
-    </form>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script>
-
+        <button type="submit" class="btn">Search</button>
+      </form>
+    </header>
+    <main>
+      <div class="loader" style="display: none">
+        Loading images, please wait...
+      </div>
+      <div class="gallery"></div>
+    </main>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
