--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <form class="search-form">
+      <form class="form">
         <input
           class="input"
           type="text"
@@ -19,11 +19,11 @@
       </form>
     </header>
     <main>
-      <div class="loader" style="display: none">
+      <span class="loader" style="display: none">
         Loading images, please wait...
-      </div>
+      </span>
 
-      <div class="gallery"></div>
+      <ul class="gallery"></ul>
     </main>
     <script type="module" src="./main.js"></script>
   </body>
